# django

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_name}}/: .dockerignore  .flake8  .gitignore  .isort.cfg  Dockerfile  README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.project_name}}/requirements/: requirements-dev.in  requirements.in  update.sh
{{cookiecutter.project_name}}/src/: conftest.py  manage.py  pytest.ini
{{cookiecutter.project_name}}/src/app/: models.py  settings.py  viewsets.py
{{cookiecutter.project_name}}/src/app/test/: client.py
{{cookiecutter.project_name}}/src/app/urls/: v1.py
{{cookiecutter.project_name}}/src/users/: models.py  urls.py
{{cookiecutter.project_name}}/src/users/api/: serializers.py
{{cookiecutter.project_name}}/src/users/migrations/: 0001_initial.py  0001_user.py
{{cookiecutter.project_name}}/src/users/tests/: test_user.py  tests_whoami.py
