[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7, <3.9"
django = "^3.1.1"
django-model-utils = "^4.0.0"
psycopg2 = "^2.8.6"
whitenoise = "^5.2.0"
environs = {extras = ["django"], version = "^8.0.0"}
djangorestframework = "^3.12.1"
djangorestframework_simplejwt = "^4.4.0"
drf-extensions = "^0.6.0"
django-filter = "^2.4.0"
redis = "^3.5.3"
sentry-sdk = "^0.17.8"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"
pytest = "^6.1.0"
pytest-django = "^3.10.0"
pytest-env = "^0.6.2"
pytest-freezegun = "^0.4.2"
pytest-mock = "^3.3.1"
jedi = "^0.17.2"
black = "^20.8b1"
flake8-absolute-import = "^1.0"
flake8-bugbear = "^20.1.4"
flake8-commas = "^2.0.0"
flake8-django = "^1.1.1"
flake8-eradicate = "^0.4.0"
flake8-isort = "^4.0.0"
flake8-mock = "^0.3"
flake8-pie = "^0.6.1"
flake8-print = "^3.1.4"
flake8-printf-formatting = "^1.1.0"
flake8-pytest = "^1.3"
flake8-pytest-style = "^1.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
